--- a/src/HumbleServer/HumbleServer.csproj
+++ b/src/HumbleServer/HumbleServer.csproj
@@ -47,12 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientConnection.cs" />
-    <Compile Include="BaseCommand.cs" />
+    <Compile Include="CommandBase.cs" />
     <Compile Include="ICommand.cs" />
     <Compile Include="NetworkClient.cs" />
     <Compile Include="NetworkServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnknowCommand.cs" />
+    <Compile Include="Unknow.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
