--- a/src/HumbleServer/HumbleServer.csproj
+++ b/src/HumbleServer/HumbleServer.csproj
@@ -46,14 +46,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientConnection.cs" />
-    <Compile Include="CommandBase.cs" />
+    <Compile Include="Session.cs" />
+    <Compile Include="IUnknowCommandHandler.cs" />
+    <Compile Include="Handlers\DefaultExceptionHandler.cs" />
+    <Compile Include="IExceptionHandler.cs" />
+    <Compile Include="MessageFraming.cs" />
+    <Compile Include="Streams\ChunkMessageBuffer.cs" />
+    <Compile Include="Streams\HumbleStreamBase.cs" />
+    <Compile Include="Streams\DelimitedStream.cs" />
     <Compile Include="Streams\FixedLengthStream.cs" />
     <Compile Include="ICommand.cs" />
     <Compile Include="NetworkClient.cs" />
     <Compile Include="NetworkServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Commands\UnknowCommand.cs" />
+    <Compile Include="Commands\DefaultUnknowCommandHandler.cs" />
     <Compile Include="Streams\IHumbleStream.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
