--- a/src/HumbleExample/.gitignore
+++ b/src/HumbleExample/.gitignore
@@ -1,10 +1,5 @@
-
-/src/_ReSharper.HumbleServer
-/src/HumbleServer/obj
-/src/HumbleServer/_ReSharper.HumbleServer
-/src/HumbleServer/bin
-/src/HumbleServer.Tests/obj
-/src/HumbleServer.Tests/bin
-/src/HumbleServer.6.0.ReSharper.user
-/src/HumbleServer.suo
-/src/nuget.config
+*.Cache
+*.user
+*.suo
+bin
+obj
