--- a/script/HumbleNetwork.nuspec
+++ b/script/HumbleNetwork.nuspec
@@ -1,12 +1,14 @@
 <?xml version="1.0"?>
 <package>
   <metadata>
-    <id>@project.id@</id>
+    <id>HumbleNetwork</id>
     <version>@version@</version>
     <authors>@project.company@</authors>
     <owners>@project.company@</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>@project.description@</description>
+	<projectUrl>https://github.com/joaofx/HumbleNetwork</projectUrl>
+	<tags>socket, network</tags>
   </metadata>
 	<files>
 		<file src="@release.dir@\*.*" target="lib" />
