--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
   - EnableNuGetPackageRestore=true
 
 script:
-  - xbuild 
+  - xbuild src/HumbleNetwork.sln
 
 notifications:
   email: false  
