--- a/tools/nuget/NuGet.targets
+++ b/tools/nuget/NuGet.targets
@@ -14,7 +14,7 @@
         <PackagesDir Condition=" '$(OS)' != 'Windows_NT'">..\..\lib</PackagesDir>
         
         <!-- NuGet command -->
-        <NuGetExePath>$(NuGetToolsPath)\NuGet.exe</NuGetExePath>
+        <NuGetExePath>$(NuGetToolsPath)\nuget.exe</NuGetExePath>
         <NuGetCommand Condition=" '$(OS)' == 'Windows_NT'">"$(NuGetExePath)"</NuGetCommand>
         <NuGetCommand Condition=" '$(OS)' != 'Windows_NT' ">mono --runtime=v4.0.30319 $(NuGetExePath)</NuGetCommand>
 
