--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
-language: c
+#language: c
+language: objective-c
 
 before_install:
+ - sudo apt-get update -qq > /dev/null
+ - sudo apt-get install -qq mono-devel > /dev/null
+ - wget http://download.mono-project.com/archive/3.0.10/macos-10-x86/MonoFramework-MDK-3.0.10.macos10.xamarin.x86.dmg
+ - hdid MonoFramework-MDK-3.0.10.macos10.xamarin.x86.dmg
+ - sudo installer -pkg "/Volumes/Mono Framework MDK 3.0.10/MonoFramework-MDK-3.0.10.macos10.xamarin.x86.pkg" -target /
+
+#before_install:
   # Make sure mono is installed,
   # pipe stdout to dev/null because qq is still too chatty
-  - sudo apt-get update -qq > /dev/null
-  - sudo apt-get install -qq mono-devel > /dev/null
+  #- sudo apt-get update -qq > /dev/null
+  #- sudo apt-get install -qq mono-devel > /dev/null
   
 env:
   - EnableNuGetPackageRestore=true
