--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@
 language: objective-c
 
 before_install:
- - sudo apt-get install cmake mono-devel mono-gmcs
+ - apt-get install cmake mono-devel mono-gmcs
  - wget http://download.mono-project.com/archive/3.0.10/macos-10-x86/MonoFramework-MDK-3.0.10.macos10.xamarin.x86.dmg
  - hdid MonoFramework-MDK-3.0.10.macos10.xamarin.x86.dmg
- - sudo installer -pkg "/Volumes/Mono Framework MDK 3.0.10/MonoFramework-MDK-3.0.10.macos10.xamarin.x86.pkg" -target /
+ - installer -pkg "/Volumes/Mono Framework MDK 3.0.10/MonoFramework-MDK-3.0.10.macos10.xamarin.x86.pkg" -target /
 
 branches:
  only:
