--- a/src/HumbleNetwork.Tests/packages.config
+++ b/src/HumbleNetwork.Tests/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="nbehave.spec.nunit" version="0.6.2" targetFramework="net40" />
   <package id="NUnit" version="2.6.2" targetFramework="net40" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
 </packages>
